# claude-inspector

./: .gitignore  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/inspector/: project.json  tsconfig.json
apps/inspector/src/: styles.scss
apps/inspector/src/app/: app.html  app.routes.ts  app.scss  app.ts
apps/inspector/src/app/claude-md-editor/: claude-md-editor.component.html  claude-md-editor.component.scss  claude-md-editor.component.ts
apps/inspector/src/app/command-palette/: command-palette.component.scss  command-palette.component.ts
apps/inspector/src/app/config/: config.component.html  config.component.scss  config.component.ts
libs/data-access/: project.json
libs/data-access/src/: index.ts
libs/data-access/src/lib/: data-access.spec.ts  notification.service.ts  session-store.service.ts  tauri-bridge.service.ts  watcher.service.ts
libs/session-parser/: README.md  project.json
libs/session-parser/src/: index.ts
libs/session-parser/src/lib/: jsonl-parser.ts  session-parser.ts  stats-calculator.ts  tree-builder.ts
libs/types/src/lib/: api.types.ts  session.types.ts  stats.types.ts  tree.types.ts  types.ts
plans/: implementation-plan.md  improvement-plan.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  lib.rs
src-tauri/src/commands/: config.rs  data.rs  mcp.rs  mod.rs  sessions.rs  watcher.rs  workspace.rs
src/app/: app.spec.ts  app.ts  nx-welcome.ts
(+55 files in other folders)
