[package]
name = "claude-inspector"
version = "0.1.0"
description = "A session analyzer for Claude Code"
authors = ["benjamindobler"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
